fix: scrollbar width compensation for the top and bottom blocks on the hero section of the main page

--- a/src/components/main/hero/hero.scss
+++ b/src/components/main/hero/hero.scss
@@ -62,7 +62,7 @@
     position: fixed;
     display: flex;
     padding-left: var(--padding-h, 80px);
-    padding-right: var(--padding-h, 80px);
+    padding-right: calc(var(--padding-h, 80px) + var(--scrollbar-width, 0));
     max-width: 1920px;
     justify-content: space-between;
     z-index: 2;
@@ -78,8 +78,8 @@
         content: '';
         position: absolute;
         bottom: 0;
-        left: var(--padding-h, 80px);
-        right: var(--padding-h, 80px);
+        left: 40px;
+        right: calc(40px + var(--scrollbar-width, 0));
         height: 2px;
         background-color: $cl-black;
       }
